@@ -127,25 +127,22 @@
 	</signalquality>
 
 	<epginfo>
-		<area condition="{currentrecording}" x="21%" y="85%" width="2%" height="{areawidth}" layer="5">
-			<drawimage x="0" y="0" width="{areawidth}*0.8" height="{areawidth}*0.8" imagetype="icon" path="recInactive" />
-		</area>
-		<area condition="{currentrecording}" x="21%" y="85%" width="2%" height="{areawidth}" layer="6">
-			<drawimage animtype="blink" animfreq="1000" x="0" y="0" width="{areawidth}*0.8" height="{areawidth}*0.8" imagetype="icon" path="rec" />
-		</area>
 		 <area x="12%" y="78%" width="11%" height="7%" layer="3">
-			<drawtext x="0" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{currentstart} - {currentstop}"/>
+			<drawtext condition="not{currentrecording}" x="0" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{currentstart} - {currentstop}"/>
+			<drawtext condition="{currentrecording}" x="0" valign="center" font="{light}" fontsize="65%" color="{clrRed}" text="{currentstart} - {currentstop}"/>
 		</area>
+		
 		<area x="24%" y="78%" width="50%" height="7%" layer="3">
 			<drawtext condition="empty{currentsubtitle}" x="0" y="0" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{currenttitle}"/>
 			<drawtext condition="isset{currentsubtitle}" x="0" y="0" font="{light}" fontsize="55%" color="{clrLightGray}" text="{currenttitle}"/>
 			<drawtext condition="isset{currentsubtitle}" x="0" y="55%" font="{light}" fontsize="45%" color="{clrLightGray}" text="{currentsubtitle}"/>
 		</area>
 		<area x="71%" y="78%" width="13%" height="7%" layer="3">
-			<drawtext align="right" valign="center" font="{light}" fontsize="45%" color="{clrLightGray}" text="+{currentremaining}/{currentduration}min" />
-		</area>
+			<drawtext y="55%" align="right" valign="center" font="{light}" fontsize="45%" color="{clrLightGray}" text="+{currentremaining}/{currentduration}min" />			
+		</area>		
 		<area x="12%" y="88%" width="11%" height="7%" layer="3">
-			<drawtext valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{nextstart} - {nextstop}"/>
+			<drawtext condition="not{nextrecording}" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{nextstart} - {nextstop}"/>
+			<drawtext condition="{nextrecording}" valign="center" font="{light}" fontsize="65%" color="{clrRed}" text="{nextstart} - {nextstop}"/>
 		</area>
 		<area x="24%" y="88%" width="50%" height="7%" layer="3">
 			<drawtext condition="empty{nextsubtitle}" x="0" y="0" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{nexttitle}"/>
@@ -201,12 +198,12 @@
 			<drawimage condition="not{hasVT}" x="0" y="0" width="{areawidth}" height="{areaheight}" imagetype="icon" path="textBG" />
 		</area>
 		
-		<!--<area condition="{isRecording}" x="21%" y="85%" width="2%" height="{areawidth}" layer="5">
+		<area condition="{isRecording}" x="21%" y="85%" width="2%" height="{areawidth}" layer="5">
 			<drawimage x="0" y="0" width="{areawidth}*0.8" height="{areawidth}*0.8" imagetype="icon" path="recInactive" />
 		</area>
 		<area condition="{isRecording}" x="21%" y="85%" width="2%" height="{areawidth}" layer="6">
 			<drawimage animtype="blink" animfreq="1000" x="0" y="0" width="{areawidth}*0.8" height="{areawidth}*0.8" imagetype="icon" path="rec" />
-		</area>-->
+		</area>
 	</statusinfo>
 
 	<audioinfo>
